--- a/TaxiProject_v2/TaxiProject_v2.vcxproj
+++ b/TaxiProject_v2/TaxiProject_v2.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="Coord.cpp" />
     <ClCompile Include="datetime.cpp" />
     <ClCompile Include="Guess.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="ParkingPlace.cpp" />
     <ClCompile Include="RoadSegment.cpp" />
     <ClCompile Include="Route.cpp" />
