--- a/TaxiProject_v2/TaxiProject_v2.vcxproj.filters
+++ b/TaxiProject_v2/TaxiProject_v2.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Trajectory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Taxi.h">
