Add class Graph Add data_graph/edges.csv add data_graph/nodes.csv
fix DateTime

--- a/TaxiProject_v2/TaxiProject_v2.vcxproj
+++ b/TaxiProject_v2/TaxiProject_v2.vcxproj
@@ -142,6 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Graph.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="ParkingPlace.cpp" />
     <ClCompile Include="Trajectory.cpp" />
@@ -149,6 +150,7 @@
   <ItemGroup>
     <ClInclude Include="Coord.h" />
     <ClInclude Include="datetime.h" />
+    <ClInclude Include="Graph.h" />
     <ClInclude Include="ParkingPlace.h" />
     <ClInclude Include="GPS.h" />
     <ClInclude Include="Trajectory.h" />
